---------------------------------------------------------------------------------------------------
Version: 3.2.2
Date: ????
  Changes:
    - Updated "Compatible ---" header names to be more in line with other headers
    - "--- categories" lists are hidden by default
---------------------------------------------------------------------------------------------------
Version: 3.2.1
Date: 2021-11-09
  Changes:
    - Updated Russian locale (by Astorin)
  Bugfixes:
    - Added missing migration for GUI data from 3.2.0
---------------------------------------------------------------------------------------------------
Version: 3.2.0
Date: 2021-11-07
  Features:
    - Added new pages:
      - Equipment category: All equipment and items belonging to each category
      - Equipment: Size, take result, equipment properties, compatible fuels, fuel categories, equipment categories, and unlocked by for each equipment
    - Added compatible equipment and equipment categories to the item page
    - Added fuel categories to burner machine page
    - Shift + click on a recipe with one product to view the product's page
    - Using the inspect hotkey will attempt to open the info page relative to the currently open GUI
      - Only works on vanilla GUIs (custom mod GUIs do not support relative anchoring)
      - This can be disabled in the mod settings
  Changes:
    - Changed default inspect hotkey to alt+click
    - Changed default search hotkey to Control + B
    - Renamed 'burner machine' to 'machine'
  Bugfixes:
    - Fixed a crash if a prototype (somehow) doesn't have a stored translation (#80)
    - Fixed a crash when another mod adds a force before RB has a chance to load
    - Fixed a crash when using the search hotkey in the equipment grid GUI (#82)
    - Fixed some edge-cases with the focus search hotkey logic
    - Fixed that mining drills were not being processed for technology unlocks